# hectic-key-capture

./: .gitignore  Cargo.toml  README.md  a  flake.nix  my-data.yaml  my-data2.yaml  my-p.yaml  my-pair.yaml  my-pairs.yaml  my-pairs2.yaml  my.yaml  mys.yaml  n  o  outp.yaml  outpu.yaml  output.yaml  p.yaml  result  trace  trace2  trace3
src/: main.rs
