[package]
name = "key_capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
colored = "2.1.0"
crossterm = "0.27.0"
device_query = "2.0.0"
hashbrown = { version = "0.14.3", features = ["serde"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_yaml = "0.9.34"
