[package]
name = "hectic-key-capture"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
colored = "2.1.0"
crossterm = "0.27.0"
device_query = "2.0.0"
env_logger = "0.11.3"
hashbrown = { version = "0.14.3", features = ["serde"] }
log = "0.4.21"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_yaml = "0.9.34"
